migration to m16
java11

migration to m16
- spring boot version 2.5.4
- groupId simplified to org.activiti.cloud
- hateoas migration
- use activiti-cloud-starter-connector,
activiti-cloud-service-messaging-starter

no k8s
- add eureka discoveryclient

use im memory h2 db
- add db driver runtime